--- a/index.html
+++ b/index.html
@@ -230,11 +230,12 @@ through data exploration and storytelling.
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3> Detection of face mask in a video</h3>
+                        <h3> Human Capital Analytics Consulting Project for GE Power</h3>
                         <p>
-                            An application that uses web camera to detect whether people have worn a face mask or not. Application is built by training a custom deep learning model built using Python's libraries like OpenCV, Keras & TensorFlow and computer vision technologies MobileNetV2 and Caffe Model.
+                            Built a statistical model (random forest classifier) with 96% accuracy to predict leadership effectiveness, identified
+opportunities to improve managerial capabilities aiding in leadership strategy development
                         </p>
-                        <a href="https://github.com/EshaKaushal/FaceMask_Detector">View Project</a>
+                        <a href="https://github.com/LohitaSrinivasan/Human-Capital-Analytics-Consulting-Project---Predictive-Modelling-to-assess-Leadership-Effectiveness">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -246,11 +247,11 @@ through data exploration and storytelling.
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Identify trends and predict popularity of songs on Spotify</h3>
+                        <h3>Hypothesis Testing - Influence of model dependent product imagery used in H&M website on its sale</h3>
                         <p>
-                            Explore Spotify’s song data to get current trend and predict popularity of songs. Project employed various libraries of Python like pandas, matplotlib, numpy to read given data, visualize, plot the trends in the data. Further, to predict the popularity of songs, we imported sklearn libraries for Data Modelling & Normalization, Linear model, Lasso, XGBRegressor and KNN to build models.
+                            This project aims to assess if having models in H&M's product imagery have significant impact in driving sales. Women's clothing category have been considered for the analysis.
                         </p>
-                        <a href="https://github.com/EshaKaushal/Spotify_Analysis/blob/main/Spotify%20Project%20Team%20-02.ipynb">View Project</a>
+                        <a href="https://github.com/LohitaSrinivasan/Hypothesis-Testing---Influence-of-model-dependent-product-imagery-used-in-H-M-s-website-on-it-s-sale">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -261,12 +262,12 @@ through data exploration and storytelling.
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Introducing 4th tier classification for postings on Craigslist</h3>
+                        <h3>Spam Detection</h3>
                         <p>
-                            Our system effectively addresses the goal of automated 4th-tier classification. Categories are generated based on the currently available ads and assigned to new posts automatically, making it easier for buyers to find their desired product without impacting advertiser’s experience in generating an ad or requiring additional manual labor on behalf of Craigslist’s advertisers nor staff. 
+                            Developed a probabilistic classification model to classify spam emails. Used natural language processing techniques to pre-process the text content of emails, extracted relevant features and trained a robust support vector machine classifier to differentiate spam/genuine emails using Python. Achieved ~84% accuracy on public(30% of the test dataset) and private leader board(70% of the test dataset). 
 
                         </p>
-                        <a href="/projects/stock">View Project</a>
+                        <a href="https://github.com/LohitaSrinivasan/Spam-Detection">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -278,11 +279,11 @@ through data exploration and storytelling.
 				</div>
 				<!-- End .project-image -->
 				<div class="project-info">
-					<h3>Automated Ad classification</h3>
+					<h3>Credit Default Prediction</h3>
 					<p>
-						Correctly classifying ads into appropriate categories on Craigslist, using text mining, text manipulation and Natural Language Processing.
+						Credit default means not being able to repay the debt. An accurate prediction of default can help in balancing risk and return for the bank by charging higher rates and reducing the credit limit for risky customers. Objective of this project is to predict if a customer will default or not, based on his associated attributes.
 					</p>
-					<a href="/projects/craigslist">View Project</a>
+					<a href="https://github.com/LohitaSrinivasan/Credit-default-prediction-">View Project</a>
 				</div>
 				<!-- End .project-info -->
 			</div>
@@ -302,34 +303,34 @@ through data exploration and storytelling.
 					</div>
 					<!-- End .project-info -->
 				</div>
-				<div class="project shadow-large">
-					<div class="project-image">
-						<img src="images/rshiny.png" />
-					</div>
-					<!-- End .project-image -->
-					<div class="project-info">
-						<h3>Financial Portfolio Management</h3>
-						<p>
-							A portfolio management dashboard built on RShiny for visualization, prediction and optimization of investor portfolios.
-						</p>
-						<a href="/projects/rshiny">View Project</a>
-					</div>
-					<!-- End .project-info -->
-				</div>
-				<div class="project shadow-large">
-					<div class="project-image">
-						<img src="images/dm.png" />
-					</div>
-					<!-- End .project-image -->
-					<div class="project-info">
-						<h3>Bankruptcy Prediction</h3>
-						<p>
-							Predict whether a firm goes bankrupt in the upcoming year based on historical data for 5 years, using ensemble modeling.
-						</p>
-						<a href="/projects/dm">View Project</a>
-					</div>
-					<!-- End .project-info -->
-				</div>
+				<!-- <div class="project shadow-large"> -->
+					<!-- <div class="project-image"> -->
+						<!-- <img src="images/rshiny.png" /> -->
+					<!-- </div> -->
+					<!-- <!-- End .project-image --> -->
+					<!-- <div class="project-info"> -->
+						<!-- <h3>Financial Portfolio Management</h3> -->
+						<!-- <p> -->
+							<!-- A portfolio management dashboard built on RShiny for visualization, prediction and optimization of investor portfolios. -->
+						<!-- </p> -->
+						<!-- <a href="/projects/rshiny">View Project</a> -->
+					<!-- </div> -->
+					<!-- <!-- End .project-info --> -->
+				<!-- </div> -->
+				<!-- <div class="project shadow-large"> -->
+					<!-- <div class="project-image"> -->
+						<!-- <img src="images/dm.png" /> -->
+					<!-- </div> -->
+					<!-- <!-- End .project-image --> -->
+					<!-- <div class="project-info"> -->
+						<!-- <h3>Bankruptcy Prediction</h3> -->
+						<!-- <p> -->
+							<!-- Predict whether a firm goes bankrupt in the upcoming year based on historical data for 5 years, using ensemble modeling. -->
+						<!-- </p> -->
+						<!-- <a href="/projects/dm">View Project</a> -->
+					<!-- </div> -->
+					<!-- <!-- End .project-info --> -->
+				<!-- </div> -->
 				<!-- End .project -->
 			</div>
         </div>
@@ -343,13 +344,10 @@ through data exploration and storytelling.
 		<div class="container">
             <ul>
 				<li>
-					<a href="https://www.credly.com/badges/70d843f8-2691-4a0a-9610-821644d80adf/public_url" target="_blank">SAS Certified Specialist : Base Programming Using SAS 9.4 </a>
+					<a href="https://www.coursera.org/account/accomplishments/specialization/RLWL2MJKKP47" target="_blank">Deep Learning Specialization</a>
 				</li>
 				<li>
-					<a href="https://www.kaggle.com/learn/certification/eshakaushal/intro-to-machine-learning" target="_blank">Kaggle - Introduction to Machine Learning </a>
-				</li>
-				<li>
-					<a href="https://www.coursera.org/account/accomplishments/verify/ZHTR9JX2WPED?utm_campaign=sharing_cta&utm_content=cert_image&utm_medium=certificate&utm_product=project&utm_source=link" target="_blank">Coursera - Building data science web app with Streamlit and Python </a>
+					<a href="https://www.datacamp.com/statement-of-accomplishment/track/eccc1ce76700f38d2cdc0a4ca9983a1a4e7f97c3" target="_blank">Datacamp - Data Scientist with Python </a>
 				</li>
             </ul>
         </div>
@@ -361,12 +359,13 @@ through data exploration and storytelling.
         <ul>
 			<li>Core Skills : </li>
 			<ul>
-				<li>Project Planning and Delivery</li>
-				<li>Technical System Design</li>
-				<li>Tech Consulting</li>
-				<li>Agile Scrum and Waterfall project management</li>
-				<li>Communication & Stakeholder Management</li>
-				<li>Advance Excel</li>
+				<li>People Analytics</li>
+				<li>Structured and Unstructured Data Analysis</li>
+				<li>Data Modelling</li>
+				<li>Database Management</li>
+				<li>Hypothesis Testing</li>
+				<li>Time series analysis</li>
+				<li>Web Scraping</li>
 			</ul>
 			<li>Data Science</li>
 			<li>Business Analytics</li>
@@ -374,19 +373,12 @@ through data exploration and storytelling.
 			<li>Machine Learning</li>
 			<li>Deep Learning</li>
 			<li>Natural Language Processing</li>
-			<li>Python (Libraries: NumPy, OpenCV, NLTK, Scikit) </li>
-			<li>TensorFlow</li>
-			<li>Keras</li>
-			<li>Streamlit</li>
+			<li>Python (Libraries: NumPy, Pandas, NLTK, Scikit) </li>
 			<li>R</li>
 			<li>SQL</li>
 			<li>Tableau</li>
-			<li>PowerBI</li>
 			<li>Microsoft Powerpoint</li>
 			<li>Microsoft Excel</li>
-			<li>JavaScript</li>
-			<li>Ad Hoc Analysis</li>
-			<li>Business Development</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -410,7 +402,7 @@ through data exploration and storytelling.
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2020 Esha Kaushal
+                        Copyright &copy; 2022 Lohita Srinivasan
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -421,10 +413,10 @@ through data exploration and storytelling.
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/EshaKaushal" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/LohitaSrinivasan" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/in/esha-kaushal/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/lohita-srinivasan/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
