--- a/index.html
+++ b/index.html
@@ -287,27 +287,27 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
 				</div>
 				<!-- End .project-info -->
 			</div>
-			<a id="view-more-projects" href="#">View More Projects</a>
-			<div id="more-projects" class="row">
-				<div class="project shadow-large">
-					<div class="project-image">
-						<img src="images/nba.png" />
-					</div>
+			<!-- <a id="view-more-projects" href="#">View More Projects</a> -->
+			<!-- <div id="more-projects" class="row"> -->
+				<!-- <div class="project shadow-large"> -->
+					<!-- <div class="project-image"> -->
+						<!-- <img src="images/nba.png" /> -->
+					<!-- </div> -->
 					<!-- End .project-image -->
-					<div class="project-info">
-						<h3>NBA Player Performance Prediction & Roster Generation</h3>
-						<p>
-							Predict player performance for the 2019-20 season, and recommend trades based on player positions, performance and user-entered budget cap.
-						</p>
-						<a href="/projects/nba">View Project</a>
-					</div>
+					<!-- <div class="project-info"> -->
+						<!-- <h3>NBA Player Performance Prediction & Roster Generation</h3> -->
+						<!-- <p> -->
+							<!-- Predict player performance for the 2019-20 season, and recommend trades based on player positions, performance and user-entered budget cap. -->
+						<!-- </p> -->
+						<!-- <a href="/projects/nba">View Project</a> -->
+					<!-- </div> -->
 					<!-- End .project-info -->
-				</div>
+				<!-- </div> -->
 				<!-- <div class="project shadow-large"> -->
 					<!-- <div class="project-image"> -->
 						<!-- <img src="images/rshiny.png" /> -->
 					<!-- </div> -->
-					<!-- <!-- End .project-image --> -->
+					<!-- End .project-image -->
 					<!-- <div class="project-info"> -->
 						<!-- <h3>Financial Portfolio Management</h3> -->
 						<!-- <p> -->
@@ -315,13 +315,13 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
 						<!-- </p> -->
 						<!-- <a href="/projects/rshiny">View Project</a> -->
 					<!-- </div> -->
-					<!-- <!-- End .project-info --> -->
+					<!-- End .project-info -->
 				<!-- </div> -->
 				<!-- <div class="project shadow-large"> -->
 					<!-- <div class="project-image"> -->
 						<!-- <img src="images/dm.png" /> -->
 					<!-- </div> -->
-					<!-- <!-- End .project-image --> -->
+					<!-- End .project-image -->
 					<!-- <div class="project-info"> -->
 						<!-- <h3>Bankruptcy Prediction</h3> -->
 						<!-- <p> -->
@@ -329,10 +329,10 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
 						<!-- </p> -->
 						<!-- <a href="/projects/dm">View Project</a> -->
 					<!-- </div> -->
-					<!-- <!-- End .project-info --> -->
+					<!-- End .project-info -->
 				<!-- </div> -->
 				<!-- End .project -->
-			</div>
+			<!-- </div> -->
         </div>
     </div>
 	<!-- Projects Above -->
