--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
             </div>
 			<div class="project shadow-large">
 				<div class="project-image">
-					<img src="images/nlp.png" />
+					<img src="images/nlp.png" height="300" width="300"/>
 				</div>
 				<!-- End .project-image -->
 				<div class="project-info">
