--- a/index.html
+++ b/index.html
@@ -110,111 +110,111 @@ through data exploration and storytelling.
     </div>
     <!-- End #about -->
 
-    <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
-        <div id="experience-timeline">
-            <div data-date="December 2018 – September 2019">
-                <h3>Target Corporation</h3>
-                <h4>Automation Consultant (Level 5)</h4>
-                <ul>
-					<li>
-						Established automation project intake and execution guidelines for finance and retail services.
-					</li>
-					<li>
-						Lead business team to gather FTE saved data and quantified benefits of automation ideas proposed to get stakeholder buy and managed project delivery with cross functional teams across Target.
-					</li>
-					<li>
-						Realized annual savings of ~ $160K in terms of contractor salaries from reduced hiring during holiday season due to automation of ticket submission process.
-					</li>
-					<li>
-						Type of automation projects delivered:
-						<ul>
-							<li> Browser based automation </li>
-							<li> MS Excel based automation </li>
-							<li> Pdf based automation </li>
-							<li> Automation of data extraction from protected environment </li>
-						</ul>
-					</li>
-                </ul>
-            </div>
+    <!-- <div id="experience" class="background-alt"> -->
+        <!-- <h2 class="heading">Experience</h2> -->
+        <!-- <div id="experience-timeline"> -->
+            <!-- <div data-date="December 2018 – September 2019"> -->
+                <!-- <h3>Target Corporation</h3> -->
+                <!-- <h4>Automation Consultant (Level 5)</h4> -->
+                <!-- <ul> -->
+					<!-- <li> -->
+						<!-- Established automation project intake and execution guidelines for finance and retail services. -->
+					<!-- </li> -->
+					<!-- <li> -->
+						<!-- Lead business team to gather FTE saved data and quantified benefits of automation ideas proposed to get stakeholder buy and managed project delivery with cross functional teams across Target. -->
+					<!-- </li> -->
+					<!-- <li> -->
+						<!-- Realized annual savings of ~ $160K in terms of contractor salaries from reduced hiring during holiday season due to automation of ticket submission process. -->
+					<!-- </li> -->
+					<!-- <li> -->
+						<!-- Type of automation projects delivered: -->
+						<!-- <ul> -->
+							<!-- <li> Browser based automation </li> -->
+							<!-- <li> MS Excel based automation </li> -->
+							<!-- <li> Pdf based automation </li> -->
+							<!-- <li> Automation of data extraction from protected environment </li> -->
+						<!-- </ul> -->
+					<!-- </li> -->
+                <!-- </ul> -->
+            <!-- </div> -->
 
-            <div data-date="June 2018 – Nov 2018">
-                <h3>Soroco</h3>
-                <h4>Engagement Associate</h4>
-                <ul>
-					<li>
-						Managed delivery of enterprise wide automation system for a finance fortune 500 company
-					</li>
-					<li>
-						Work on end-to-end (issue identification, requirement gathering, design, build, test, deploy, on-going support, etc.) timeline, project, and scope management
-					</li>
-					<li>
-						Managing project timelines, creating UAT plans and test cases and coordinating with Go-Live Plans
-					</li>
-                </ul>
-            </div>
+            <!-- <div data-date="June 2018 – Nov 2018"> -->
+                <!-- <h3>Soroco</h3> -->
+                <!-- <h4>Engagement Associate</h4> -->
+                <!-- <ul> -->
+					<!-- <li> -->
+						<!-- Managed delivery of enterprise wide automation system for a finance fortune 500 company -->
+					<!-- </li> -->
+					<!-- <li> -->
+						<!-- Work on end-to-end (issue identification, requirement gathering, design, build, test, deploy, on-going support, etc.) timeline, project, and scope management -->
+					<!-- </li> -->
+					<!-- <li> -->
+						<!-- Managing project timelines, creating UAT plans and test cases and coordinating with Go-Live Plans -->
+					<!-- </li> -->
+                <!-- </ul> -->
+            <!-- </div> -->
 
-            <div data-date="June 2014 – May 2018">
-                <h3>ZS Associates</h3>
-                <h4>Senior Business Technology Analyst</h4>
-                <ul>
-					<li> End to end project management inclusive of client engagement, content building, deliverable and timeline governance, finances, and team staffing.</li>
-					<li> Spearheaded teams of 4-5 associates and lead UI mock-up creation, database architecture design, designing script logic/flows and delivery of several projects for many US based pharma clients</li>
-					<li> Technical team lead for ZS’s flagship goal management solution for $17.3B US Pharma giant.</li>
-					<li> Handled ongoing project operations and lead improvements on existing tools along with their budgeting with the clients.</li>
-					<li> Worked in close liaison with Software development team on deciding product roadmap of ZS’s custom web tools.</li>
-					<li> Recipient of 3 performance based avoids </li>
-                </ul>
-            </div>
+            <!-- <div data-date="June 2014 – May 2018"> -->
+                <!-- <h3>ZS Associates</h3> -->
+                <!-- <h4>Senior Business Technology Analyst</h4> -->
+                <!-- <ul> -->
+					<!-- <li> End to end project management inclusive of client engagement, content building, deliverable and timeline governance, finances, and team staffing.</li> -->
+					<!-- <li> Spearheaded teams of 4-5 associates and lead UI mock-up creation, database architecture design, designing script logic/flows and delivery of several projects for many US based pharma clients</li> -->
+					<!-- <li> Technical team lead for ZS’s flagship goal management solution for $17.3B US Pharma giant.</li> -->
+					<!-- <li> Handled ongoing project operations and lead improvements on existing tools along with their budgeting with the clients.</li> -->
+					<!-- <li> Worked in close liaison with Software development team on deciding product roadmap of ZS’s custom web tools.</li> -->
+					<!-- <li> Recipient of 3 performance based avoids </li> -->
+                <!-- </ul> -->
+            <!-- </div> -->
 			
-			<div data-date="Nov 2013 – May 2014">
-                <h3>Deloitte Touche & Tohmatsu</h3>
-                <h4>Associate - Enterprise Risk Services</h4>
-                <ul>
-					<li>
-						Independently conducted IT General Control testing (ITGC) audits, SAP Auditing, OS and database auditing, for major listed clients.
-					</li>
-                </ul>
-            </div>
-        </div>
-    </div>
+			<!-- <div data-date="Nov 2013 – May 2014"> -->
+                <!-- <h3>Deloitte Touche & Tohmatsu</h3> -->
+                <!-- <h4>Associate - Enterprise Risk Services</h4> -->
+                <!-- <ul> -->
+					<!-- <li> -->
+						<!-- Independently conducted IT General Control testing (ITGC) audits, SAP Auditing, OS and database auditing, for major listed clients. -->
+					<!-- </li> -->
+                <!-- </ul> -->
+            <!-- </div> -->
+        <!-- </div> -->
+    <!-- </div> -->
     <!-- End #experience -->
 
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>Purdue University</h3>
-            <span class="education-date">Jan 2021 - Dec 2021</span>
+            <span class="education-date">Aug 2021 - Jun 2022</span>
             <h4>Master of Science in Business Analytics and Information Management</h4>
             <ul>
 				<li>
 					Awarded a merit-based scholarship from Krannert
 				</li>
 				<li>
-					Selected to the 2020 INFORMS Business Analytics conference for work done in "A Novel Application of Optical Character Recognition for Product Image Compliance"
+					Selected to the 2022 INFORMS Business Analytics conference for work done in "Buy-Again Product Recommendation Engine"
 				</li>
 				<li>
-					Technical Coursework: Python programming, Predictive Analytics, Analyzing Unstructured Data, Data Mining, Advanced Business Analytics, Business Analytics, Management of Organizational Data, Spreadsheet Modeling and Optimization
+					Technical Coursework: Python programming, Web Data Analytics, Data Mining, Advanced Business Analytics, Business Analytics, Management of Organizational Data, Spreadsheet Modeling and Optimization
 				</li>
 				<li>
-					Business Coursework: IT Project Management, Pricing Strategies and Analytics, Marketing Management, Communication and Persuasion
+					Business Coursework: IT Project Management, IT Innovation and Digital Advantage, Communication and Persuasion
 				</li>	
             </ul>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>MDU Rohtak</h3>
-            <span class="education-date">August 2009 - April 2013</span>
-            <h4>Bachelor of Technology in Information Technology Engineering</h4>
-            <ul>
-                <li>
-                    Interned in ITC Ltd, Polaris, Deloitte Touche and Tohmatsu (Jan'13 - June'13)
-                </li>
-				<li>
-                    University Topper and overall college topper in all streams
-                </li>
-            </ul>
+            <h3>Government College of Technology</h3>
+            <span class="education-date">July 2014 - May 2018</span>
+            <h4>Bachelor of Technology in Industrial Biotechnology</h4>
+            <!-- <ul> -->
+                <!-- <li> -->
+                    <!-- Interned in ITC Ltd, Polaris, Deloitte Touche and Tohmatsu (Jan'13 - June'13) -->
+                <!-- </li> -->
+				<!-- <li> -->
+                    <!-- University Topper and overall college topper in all streams -->
+                <!-- </li> -->
+            <!-- </ul> -->
         </div>
         <!-- End .education-block -->
     </div>
@@ -226,7 +226,7 @@ through data exploration and storytelling.
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/mask.png" height="250" width="250"/>
+                        <img src="hr analytics.png" height="250" width="250"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -243,7 +243,7 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/spotify.jpg" height="300" width="300"/>
+                        <img src="h.png" height="300" width="300"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -258,7 +258,7 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
                 <!-- End .project -->
 				<div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/stock.jpg" height="300" width="300"/>
+                        <img src="images/spam detection.jpg" height="300" width="300"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -275,7 +275,7 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
             </div>
 			<div class="project shadow-large">
 				<div class="project-image">
-					<img src="images/nlp.png" height="300" width="300"/>
+					<img src="images/credit default.png" height="300" width="300"/>
 				</div>
 				<!-- End .project-image -->
 				<div class="project-info">
