--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ through data exploration and storytelling.
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="hr analytics.png" height="250" width="250"/>
+                        <img src="images/hranalytics.png" height="250" width="250"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -243,7 +243,7 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="h.png" height="300" width="300"/>
+                        <img src="images/h.png" height="300" width="300"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
