--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
                 <!-- End .project -->
 				<div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/spam detection.jpg" height="300" width="300"/>
+                        <img src="images/spam detection.png" height="300" width="300"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
