--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-						<b><i>Driven and detail-oriented Graduate student and HR Analyst with 3.5 years of work experience adept at solving business problems
+						<b>Driven and detail-oriented Graduate student and HR Analyst with 3 years of work experience adept at solving business problems
 through data exploration and storytelling.
 						<ul>
 							<!-- <li> Facilitation of requirement-gathering and design sessions with client teams. Translation of pain-points into business process or technology short-comings.</li> -->
@@ -108,25 +108,30 @@ through data exploration and storytelling.
             </div>
         </div>
     </div>
-    <!-- End #about -->
+    End #about
 
-    <!-- <div id="experience" class="background-alt"> -->
-        <!-- <h2 class="heading">Experience</h2> -->
-        <!-- <div id="experience-timeline"> -->
-            <!-- <div data-date="December 2018 – September 2019"> -->
-                <!-- <h3>Target Corporation</h3> -->
-                <!-- <h4>Automation Consultant (Level 5)</h4> -->
-                <!-- <ul> -->
-					<!-- <li> -->
-						<!-- Established automation project intake and execution guidelines for finance and retail services. -->
-					<!-- </li> -->
-					<!-- <li> -->
-						<!-- Lead business team to gather FTE saved data and quantified benefits of automation ideas proposed to get stakeholder buy and managed project delivery with cross functional teams across Target. -->
-					<!-- </li> -->
-					<!-- <li> -->
-						<!-- Realized annual savings of ~ $160K in terms of contractor salaries from reduced hiring during holiday season due to automation of ticket submission process. -->
-					<!-- </li> -->
-					<!-- <li> -->
+    <div id="experience" class="background-alt">
+        <h2 class="heading">Experience</h2>
+        <div id="experience-timeline">
+            <div data-date="May 2019 – August 2020">
+                <h3>Elgi Equipments Ltd</h3>
+                <h4>HR Analyst/ HR Business Partner</h4>
+                <ul>
+					<li>
+						Predicted employee churn, candidate churn and analyzed performance/potential, retention, yield ratio, time and cost per hire, early turnover, quality of hire aspects of Employee datasets accomplishing end-to-end project deliverables
+					</li>
+					<li>
+						Performed clustering analysis of sales teams to identify patterns/ niche backgrounds of exceptional teams 
+					</li>
+					<li>
+						Identified gaps in recruitment process through data analysis and improved recruitment efficiency by 25% by introducing a competency assessment and thereby improved the quality of hire by 10%
+					</li>
+					<li>
+						Managed HR operations for 34 employees of Africa and Middle East region across 7 countries in a collaborative and participative management style, saved 1 Mn INR by recruiting 14 mid-senior level positions for through direct sourcing
+					</li>
+					<li>
+						Formulated international policy through policy benchmarking of UAE based companies 
+					</li>
 						<!-- Type of automation projects delivered: -->
 						<!-- <ul> -->
 							<!-- <li> Browser based automation </li> -->
@@ -135,31 +140,31 @@ through data exploration and storytelling.
 							<!-- <li> Automation of data extraction from protected environment </li> -->
 						<!-- </ul> -->
 					<!-- </li> -->
-                <!-- </ul> -->
-            <!-- </div> -->
+                </ul>
+            </div>
 
-            <!-- <div data-date="June 2018 – Nov 2018"> -->
-                <!-- <h3>Soroco</h3> -->
-                <!-- <h4>Engagement Associate</h4> -->
-                <!-- <ul> -->
-					<!-- <li> -->
-						<!-- Managed delivery of enterprise wide automation system for a finance fortune 500 company -->
-					<!-- </li> -->
-					<!-- <li> -->
-						<!-- Work on end-to-end (issue identification, requirement gathering, design, build, test, deploy, on-going support, etc.) timeline, project, and scope management -->
-					<!-- </li> -->
+            <div data-date="May 2018 – April 2019">
+                <h3>Elgi Equipments Ltd</h3>
+                <h4>Graduate Engineer Trainee - Human Resources </h4>
+                <ul>
+					<li>
+						Recruited sales, aftermarket, customer care and product management personnel and assisted in on-campus hiring
+					</li>
+					<li>
+						•	Onboarded 40 trainees and increased entry-level employee performance by 40% via trainings and continuous feedback
+					</li>
 					<!-- <li> -->
 						<!-- Managing project timelines, creating UAT plans and test cases and coordinating with Go-Live Plans -->
 					<!-- </li> -->
-                <!-- </ul> -->
-            <!-- </div> -->
+                </ul>
+            </div>
 
-            <!-- <div data-date="June 2014 – May 2018"> -->
-                <!-- <h3>ZS Associates</h3> -->
-                <!-- <h4>Senior Business Technology Analyst</h4> -->
-                <!-- <ul> -->
-					<!-- <li> End to end project management inclusive of client engagement, content building, deliverable and timeline governance, finances, and team staffing.</li> -->
-					<!-- <li> Spearheaded teams of 4-5 associates and lead UI mock-up creation, database architecture design, designing script logic/flows and delivery of several projects for many US based pharma clients</li> -->
+            <div data-date="November 2017 – April 2018">
+                <h3>Elgi Equipments Ltd </h3>
+                <h4>Intern – Marketing Analyst for Special Projects</h4>
+                <ul>
+					<li> Analyzed the quantity and quality of cold calls data to find insights on B2B sales data of territories across India</li>
+					<li> Developed dynamic manpower guide and HR Reporting Analytics Dashboard for Centre of Excellence</li>
 					<!-- <li> Technical team lead for ZS’s flagship goal management solution for $17.3B US Pharma giant.</li> -->
 					<!-- <li> Handled ongoing project operations and lead improvements on existing tools along with their budgeting with the clients.</li> -->
 					<!-- <li> Worked in close liaison with Software development team on deciding product roadmap of ZS’s custom web tools.</li> -->
@@ -287,10 +292,10 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
 				</div>
 				<!-- End .project-info -->
 			</div>
-			<!-- <a id="view-more-projects" href="#">View More Projects</a> -->
-			<!-- <div id="more-projects" class="row"> -->
-				<!-- <div class="project shadow-large"> -->
-					<!-- <div class="project-image"> -->
+			<a id="view-more-projects" href="#">View More Projects</a>
+			<div id="more-projects" class="row">
+				<div class="project shadow-large">
+					<div class="project-image">
 						<!-- <img src="images/nba.png" /> -->
 					<!-- </div> -->
 					<!-- End .project-image -->
