--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <li>
                 <a href="#projects">Projects</a>
             </li>
-			<li>
-                <a href="#certificates">Certifications</a>
-            </li>
+			<!-- <li> -->
+                <!-- <a href="#certificates">Certifications</a> -->
+            <!-- </li> -->
             <li>
                 <a href="#skills">Skills</a>
             </li>
@@ -98,11 +98,12 @@
                     <p>
 						<b>Driven and detail-oriented Graduate student and HR Analyst with 3 years of work experience adept at solving business problems
 through data exploration and storytelling.
-						<ul>
+						<b> Currently pursuing MS in Business Analytics (Graduating in June ’22) to further hone my analytics skills and make more meaningful impact in the space of HR Analytics.
+						<!-- <ul> -->
 							<!-- <li> Facilitation of requirement-gathering and design sessions with client teams. Translation of pain-points into business process or technology short-comings.</li> -->
 							<!-- <li> Coordination of a medium-sized (7-8) off-shore and small(2-3) onshore team. I am ultimately responsible for our team's delivery across our project umbrella to our clients.</li> -->
-						</ul>
-						Currently pursuing MS in Business Analytics (Graduating in June ’22) to further hone my analytics skills and make more meaningful impact in the space of HR Analytics
+						<!-- </ul> -->
+						
                     </p>
                 </div>
             </div>
@@ -296,17 +297,17 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
 			<div id="more-projects" class="row">
 				<div class="project shadow-large">
 					<div class="project-image">
-						<!-- <img src="images/nba.png" /> -->
-					<!-- </div> -->
-					<!-- End .project-image -->
-					<!-- <div class="project-info"> -->
-						<!-- <h3>NBA Player Performance Prediction & Roster Generation</h3> -->
-						<!-- <p> -->
-							<!-- Predict player performance for the 2019-20 season, and recommend trades based on player positions, performance and user-entered budget cap. -->
-						<!-- </p> -->
-						<!-- <a href="/projects/nba">View Project</a> -->
-					<!-- </div> -->
-					<!-- End .project-info -->
+						<img src="images/mejer.png" />
+					</div>
+					End .project-image
+					<div class="project-info">
+						<h3>Buy Again Product Recommendation Engine through machine learning</h3>
+						<p>
+							Developed a probabilistic classification model to predict customer’s purchase behavior based on recency, frequency, price sensitivity and acceptance of substitution to improve customer satisfaction and buying experience.
+						</p>
+						<a href="https://github.com/LohitaSrinivasan/Buy-Again---Product-Recommendation-Engine-through-machine-learning/blob/main/Buy-again%20recommendation%20engine%20-%2020220311.png">View Project</a>
+					</div>
+					End .project-info
 				<!-- </div> -->
 				<!-- <div class="project shadow-large"> -->
 					<!-- <div class="project-image"> -->
