--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ through data exploration and storytelling.
             </div>
         </div>
     </div>
-    End #about
+    <!-- End #about -->
 
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
@@ -171,7 +171,7 @@ through data exploration and storytelling.
 					<!-- <li> Worked in close liaison with Software development team on deciding product roadmap of ZS’s custom web tools.</li> -->
 					<!-- <li> Recipient of 3 performance based avoids </li> -->
                 <!-- </ul> -->
-            <!-- </div> -->
+            </div>
 			
 			<!-- <div data-date="Nov 2013 – May 2014"> -->
                 <!-- <h3>Deloitte Touche & Tohmatsu</h3> -->
@@ -297,9 +297,9 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
 			<div id="more-projects" class="row">
 				<div class="project shadow-large">
 					<div class="project-image">
-						<img src="images/mejer.png" />
+						<img src="images/meijer.png" />
 					</div>
-					End .project-image
+					<!-- End .project-image -->
 					<div class="project-info">
 						<h3>Buy Again Product Recommendation Engine through machine learning</h3>
 						<p>
@@ -307,7 +307,7 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
 						</p>
 						<a href="https://github.com/LohitaSrinivasan/Buy-Again---Product-Recommendation-Engine-through-machine-learning/blob/main/Buy-again%20recommendation%20engine%20-%2020220311.png">View Project</a>
 					</div>
-					End .project-info
+					<!-- End .project-info -->
 				<!-- </div> -->
 				<!-- <div class="project shadow-large"> -->
 					<!-- <div class="project-image"> -->
