--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/h.png" height="300" width="300"/>
+                        <img src="images/h.png" height="250" width="250"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -264,7 +264,7 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
                 <!-- End .project -->
 				<div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/spam detection.png" height="300" width="300"/>
+                        <img src="images/spam detection.png" height="250" width="250"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -281,7 +281,7 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
             </div>
 			<div class="project shadow-large">
 				<div class="project-image">
-					<img src="images/credit default.png" height="300" width="300"/>
+					<img src="images/credit default.png" height="250" width="250"/>
 				</div>
 				<!-- End .project-image -->
 				<div class="project-info">
@@ -308,7 +308,7 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
 						<a href="https://github.com/LohitaSrinivasan/Buy-Again---Product-Recommendation-Engine-through-machine-learning/blob/main/Buy-again%20recommendation%20engine%20-%2020220311.png">View Project</a>
 					</div>
 					<!-- End .project-info -->
-				<!-- </div> -->
+				</div>
 				<!-- <div class="project shadow-large"> -->
 					<!-- <div class="project-image"> -->
 						<!-- <img src="images/rshiny.png" /> -->
@@ -338,7 +338,7 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
 					<!-- End .project-info -->
 				<!-- </div> -->
 				<!-- End .project -->
-			<!-- </div> -->
+			</div>
         </div>
     </div>
 	<!-- Projects Above -->
