--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ opportunities to improve managerial capabilities aiding in leadership strategy d
 			<div id="more-projects" class="row">
 				<div class="project shadow-large">
 					<div class="project-image">
-						<img src="images/meijer.png" />
+						<img src="images/mejer.png" />
 					</div>
 					<!-- End .project-image -->
 					<div class="project-info">
